[package]
name = "alda"
version = "0.0.0"
publish = false
authors = ["Styvane Soukossi <styvane@acm.org>"]
edition = "2018"
keywords = ["algorithms", "data structure"]
description = "Algorithms and data structures implementation for learning purpose"

[dependencies]
num-traits = "0.2"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"